--- a/msvc-items-dev.properties
+++ b/msvc-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando el ambiente de defecto ...
-configuracion.autor.nombre=PEdrito
+configuracion.autor.nombre=PEdrito.
 configuracion.autor.email=PEdrito.qui@ejemplo.com
